# FailTeamLab3

./: DexterousSpace.py  IK.py  PolyTraj.py  PolyTrajVia.py  README.md  main.py
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/include/dynamixel_controllers/: RestartControllerRequest.h  RestartControllerResponse.h  SetComplianceMarginRequest.h  SetComplianceMarginResponse.h  SetCompliancePunchRequest.h  SetCompliancePunchResponse.h  SetComplianceSlopeRequest.h  SetComplianceSlopeResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetTorqueLimitRequest.h  SetTorqueLimitResponse.h  StartControllerRequest.h  StartControllerResponse.h  StopControllerRequest.h  StopControllerResponse.h  TorqueEnableRequest.h  TorqueEnableResponse.h
catkin_ws/devel/include/dynamixel_msgs/: JointState.h  MotorState.h  MotorStateList.h
catkin_ws/devel/include/robot_control/: accelerometr.h  contact.h  coord.h  fsrInput.h  newtactile.h  rigid.h  state.h  tactile.h
catkin_ws/devel/lib/move/: moveit_motor_state
catkin_ws/devel/lib/move_snake_robot/: move_joint_1
catkin_ws/devel/lib/pkgconfig/: dynamixel_controllers.pc  dynamixel_driver.pc  dynamixel_msgs.pc  dynamixel_tutorials.pc  gazebo_robot.pc  move.pc  move_snake_robot.pc  moveit_arm.pc  my_dynamixel_tutorial.pc  robot_control.pc  robot_description.pc  snake_control2.pc  (+1 more)
catkin_ws/src/snake_control2/: CMakeLists.txt  package.xml
catkin_ws/src/snake_control2/src/: snake_control.cpp  test.cpp
catkin_ws/src/snake_trajectory_control/: CMakeLists.txt
catkin_ws/src/snake_trajectory_control/src/: move_joint_1.cpp
(+29 files in other folders)
